@@ -3603,6 +3603,8 @@ if [ $CROSS = false ] ; then
   echotab "test \"\`echo '(+ foo bar)' | \$(RUN) -q -M lispinit.mem -x '(setq foo 11 bar 99)' -repl ${TRCR}${TRLF}\`\" = '99_[1]> _110_' || exit 1"
   echotab "\$(RM) script.lisp; echo '(error \"loading script.lisp\")' > script.lisp"
   echotab "if \$(RUN) -q -M lispinit.mem -x '(load \"script.lisp\")' -repl < /dev/null; then exit 1; else :; fi"
+  echotab "\$(RM) script.lisp; echo '(eval-when (:compile-toplevel) (princ *args*))' > script.lisp"
+  echotab "output=\`\$(RUN) -q -q -M lispinit.mem -c script.lisp foo bar\`; test \"\$\$output\" = '(foo bar)' || exit 1"
   if [ "$HOS" != win32 ]; then # woe32 has unpredictable exit codes
     # http://article.gmane.org/gmane.lisp.clisp.devel/18967
     # https://sourceforge.net/p/clisp/mailman/message/20318073/
@@ -3643,7 +3645,7 @@ if [ $CROSS = false ] ; then
       echotab "\$(RM) script.lisp; nohup \$(RUN) -q -M lispinit.mem -x 42 2>&1 > script.lisp; output_last_line=\`sed -n -e '\$\$p' script.lisp ${TRCR}\`; test \"\$\$output_last_line\" = 42 || exit 1 "
       ;;
   esac
-  echotab "\$(RM) script.lisp"
+  echotab "\$(RM) script.lisp script.fas script.lib"
   RAISE='(setq *error-output* *standard-output*) (error "myerror")'
   echotab "output=\"\`\$(RUN) -q -M lispinit.mem -x '(progn ${RAISE})' ${TRCR}\`\"; test \"\$\$output\" = '*** - myerror' || exit 1"
   echotab "if \$(RUN) -q -M lispinit.mem -x '(progn ${RAISE})'; then exit 1; fi"
